--- a/core/res/res/values/arrow_config.xml
+++ b/core/res/res/values/arrow_config.xml
@@ -111,4 +111,6 @@
 
     <!-- Shows the required view for in-display fingerprint --> 
     <bool name="config_supportsInDisplayFingerprint">false</bool>
+
+    <integer name="config_flashlightProximityTimeout">300</integer>
 </resources>
