--- a/core/res/res/values/arrow_symbols.xml
+++ b/core/res/res/values/arrow_symbols.xml
@@ -89,4 +89,6 @@
 
     <!-- Themes -->
     <java-symbol type="color" name="theme_generic_semi_transparent_color" />
+
+    <java-symbol type="integer" name="config_flashlightProximityTimeout" />
 </resources>
