fwb: Add dynamic Immersive Mode tile
on top of existing aosp policy control code

- immersive statusbar
- immersive navbar
- full immersive

quicksearchbox apk is blacklisted to avoid battery drain / unlock lag

- tap to cycle modes
- long press to enable the selected immersive mode
- if the current immersive mode is enabled, long pressing again the tile
will disable immersive so no need to cycle the tile to go to the "off"
position
- tile icon will be set to active or unactive state according to the
current mode

Change-Id: I1747b7f4077247014ca5e2a160712354df6e023e

Immersive tile: more cleanup

no need to have a specific "off" state because we already allow to
disable immersive longpressing on one of the other states when
they are active

Change-Id: I524a8927a1e9f89244fccefabc5dd1926fed6608

--- a/packages/SystemUI/res/values/arrow_strings.xml
+++ b/packages/SystemUI/res/values/arrow_strings.xml
@@ -137,4 +137,11 @@
     <string name="qs_menu_item_qs_brightness_position_bottom">Brightness bar bottom</string>
     <string name="qs_menu_item_brightness_icon">Brightness icon</string>
 
+    <!--Immersive mode tile -->
+    <string name="quick_settings_immersive_tile">Immersive mode</string>
+    <string name="quick_settings_immersive_tile_off">Immersive off</string>
+    <string name="quick_settings_immersive_tile_statusbar">Immersive statusbar</string>
+    <string name="quick_settings_immersive_tile_navbar">Immersive navbar</string>
+    <string name="quick_settings_immersive_tile_full">Immersive full</string>
+
 </resources>
