--- a/packages/SystemUI/res/values/arrow_strings.xml
+++ b/packages/SystemUI/res/values/arrow_strings.xml
@@ -103,4 +103,5 @@
     <!-- Screenrecord QS tile -->
     <string name="screenrecord_stopdot_label">Show stop dot\nLongpress to move it</string>
     <string name="screenrecord_lowquality_label">Lower quality for smaller file size</string>
+    <string name="screenrecord_longer_timeout_switch_label">Bigger file size limit\nLimit recording size to 15GiB</string>
 </resources>
